# rag-deep-dive

./: .gitignore  contextual_chunk_header.py  main.py  pyproject.toml  rag_evaluation.py
helper_functions/: read_pdf_to_string.py  replace_t_with_space.py  retrieve_context_per_question.py  show_context.py
